# local-llm-function-calling

./: LICENSE  README.md  pyproject.toml
docs/: about.md  api.rst  conf.py  constraining.md  generation.md  index.rst  quickstart.md
local_llm_function_calling/: __init__.py  constrainer.py  exceptions.py  generator.py  prompter.py
local_llm_function_calling/model/: __init__.py  common.py  huggingface.py  llama.py
